--- a/project.html
+++ b/project.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <h1>my div </h1>
+        <p> this is my div </p>
+    </div>
 </body>
 </html>
